# MacCMS-rust

./: .env  .gitignore  CHANGELOG  Cargo.toml  Dockerfile  LICENSE  README.md  entrypoint.sh  tailwind.config.js
.github/workflows/: docker-image.yml
src/: admin_handlers.rs  api_handlers.rs  auth.rs  auth_handlers.rs  collect_handlers.rs  db.rs  dto.rs  index_manager.rs  init_data.rs  main.rs  models.rs  scheduled_task.rs  site_data.rs  template.rs  web_handlers.rs
static/css/: output.css  output2.css  style.css  style1.css
static/js/: app.js  navbar.js
templates/: about.html  base.html  contact.html  detail.html  index.html  list.html  player.html  search.html
templates/admin/: base.html  bindings.html  collect.html  collect_vod.html  collections.html  config.html  index.html  indexes.html  login.html  types.html  vods.html
templates/new/: base.html  detail.html  index.html  list.html  player.html  privacy.html  search.html  terms.html
templates/new/partials/: nav.html
templates/old/: base.html  list.html  search.html
templates/old/partials/: nav.html
templates/partials/: nav.html
templates/static_html/: about.html  background.avif  contact.html  detail.html  index.html  list.html  navbar.css  navbar.html  player.html  privacy.html  search.html  terms.html
templates/user/: profile.html
