[package]
name = "maccms_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
mongodb = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dotenv = "0.15"
quick-xml = { version = "0.31", features = ["serialize"] }
tera = "1"
lazy_static = "1.4.0"
bcrypt = "0.15"
chrono = "0.4"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
url = "2"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4"] }
image = "0.24"
webp = "0.2"
